--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
                         <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
                             <h3 class="text-base sm:text-lg font-bold">British and Irish Lions Rugby</h3>
                             <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
-                            <ul id="intRugby-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>
+                            <ul id="bil-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>
                         </div>
                     </div>
                 </div>
