--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
                         </div>
                     </div>
                 </div>
-                
+                <!-- Added this for the BIL rugby -->
                 <h2 class="text-center text-xl sm:text-2xl font-semibold text-blue- anyways400 mb-4">British and Irish Lions Rugby Schedules</h2>
                 <div class="grid grid-cols-1 gap-4 sm:gap-6">
                     <div id="card-bil-rugby" class="weather-card bg-[url('images/Rugby1.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
