--- a/index.html
+++ b/index.html
@@ -433,6 +433,12 @@
                                             Your browser does not support the video tag.
                                         </video>
                                             <p>FORMULA ADDICT. (2025, June 27). DRS [Video]. X. https://x.com/i/status/1938602984323293583</p>
+                                            <p><strong>Max vs Team mates</strong></p>
+                                        <video width="640" height="360" controls>
+                                            <source src="images/Max.mp4" type="video/mp4">
+                                            Your browser does not support the video tag.
+                                        </video>
+                                            <p>FORMULA ADDICT. (2025, June 30). Max [Video]. X. https://x.com/i/status/1939697674082746397</p>
                                             <img src="images/2026.png" alt="2026 Schedule" class="w-full max-w-md h-auto mb-4">
                                         </div>                                  
                                         <div id="facts-australia" class="facts-content hidden">
