--- a/index.html
+++ b/index.html
@@ -559,6 +559,12 @@
                                         <div id="facts-british" class="facts-content hidden">
                                             <p><strong>British Grand Prix</strong></p>
                                             <img src="images/GB.png" alt="Austrian Grand Prix" class="w-full max-w-md h-auto mb-4">
+                                             <p><strong>Max Qualifying</strong></p>
+                                        <video width="640" height="360" controls>
+                                            <source src="images/MaxQualy.mp4" type="video/mp4">
+                                            Your browser does not support the video tag.
+                                        </video>
+                                            <p>FORMULA ADDICT. (2025, July 05). Max Qualifying [Video]. X. https://x.com/i/status/1941602298515357792</p>
                                         </div>
                                     </div>
                                 </div>
