--- a/index.html
+++ b/index.html
@@ -304,6 +304,7 @@
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-canada')">Canadian GP</button>
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-austria')">Austrian GP</button>
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-british')">British GP</button>
+                                        <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-belgium')">Belgium GP</button>
                                     </nav>
                                     <!-- Race Results Content -->
                                     <div id="f1-results-content" class="text-sm sm:text-base mt-2">
@@ -367,6 +368,10 @@
                                             <p><strong>British Grand Prix</strong></p>
                                             <img src="images/GBResult.png" alt="British Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
+                                        <div id="race-belgium" class="race-content">
+                                            <p><strong>Belgium Grand Prix</strong></p>
+                                            <img src="images/BelgiumResult.png" alt="Belgium Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -392,6 +397,7 @@
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-canada')">Canadian GP</button>
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-austria')">Austrian GP</button>
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-british')">British GP</button>
+                                        <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-belgium')">Belgium GP</button>
                                     </nav>
                                     <!-- Race Facts content -->
                                     <div id="f1-facts-content" class="text-sm sm:text-base mt-2">
@@ -558,13 +564,17 @@
                                         </div>
                                         <div id="facts-british" class="facts-content hidden">
                                             <p><strong>British Grand Prix</strong></p>
-                                            <img src="images/GB.png" alt="Austrian Grand Prix" class="w-full max-w-md h-auto mb-4">
+                                            <img src="images/GB.png" alt="British Grand Prix" class="w-full max-w-md h-auto mb-4">
                                              <p><strong>Max Qualifying</strong></p>
                                         <video width="640" height="360" controls>
                                             <source src="images/MaxQualy.mp4" type="video/mp4">
                                             Your browser does not support the video tag.
                                         </video>
                                             <p>FORMULA ADDICT. (2025, July 05). Max Qualifying [Video]. X. https://x.com/i/status/1941602298515357792</p>
+                                        </div>
+                                        <div id="facts-belgium" class="facts-content hidden">
+                                            <p><strong>Belgium Grand Prix</strong></p>
+                                            <img src="images/Belgium.png" alt="Belgium Grand Prix" class="w-full max-w-md h-auto mb-4">
                                         </div>
                                     </div>
                                 </div>
