--- a/index.html
+++ b/index.html
@@ -304,6 +304,7 @@
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-canada')">Canadian GP</button>
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-austria')">Austrian GP</button>
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-british')">British GP</button>
+                                        <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-belgium-sprint')">Belgium GP Sprint</button>
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-belgium')">Belgium GP</button>
                                     </nav>
                                     <!-- Race Results Content -->
@@ -367,6 +368,10 @@
                                         <div id="race-british" class="race-content">
                                             <p><strong>British Grand Prix</strong></p>
                                             <img src="images/GBResult.png" alt="British Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                        </div>
+                                        <div id="race-belgium-sprint" class="race-content">
+                                            <p><strong>Belgium Sprint Grand Prix</strong></p>
+                                            <img src="images/BelgiumSprintResult.png" alt="Belgium Sprint Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
                                         <div id="race-belgium" class="race-content">
                                             <p><strong>Belgium Grand Prix</strong></p>
