--- a/index.html
+++ b/index.html
@@ -426,6 +426,12 @@
                                                 Your browser does not support the video tag.
                                             </video>
                                             <p>FORMULA ADDICT. (2025, June 04). F1 Car Parts [Video]. X. https://x.com/i/status/1930340443847569594</p>
+                                            <p><strong>F1 Gearbox</strong></p>
+                                            <video width="640" height="360" controls>
+                                                <source src="images/Gearbox.mp4" type="video/mp4">
+                                                Your browser does not support the video tag.
+                                            </video>
+                                            <p>FORMULA ADDICT. (2025, July 14). F1 Gearbox [Video]. X. https://x.com/i/status/1944748839568880073</p>
                                             <p><strong>F1 wins</strong></p>
                                             <video width="640" height="360" controls>
                                                 <source src="images/F1Wins.mp4" type="video/mp4">
@@ -580,6 +586,12 @@
                                         <div id="facts-belgium" class="facts-content hidden">
                                             <p><strong>Belgium Grand Prix</strong></p>
                                             <img src="images/Belgium.png" alt="Belgium Grand Prix" class="w-full max-w-md h-auto mb-4">
+                                            <p><strong>Qualifying</strong></p>
+                                        <video width="640" height="360" controls>
+                                            <source src="images/BelgiumQualy.mp4" type="video/mp4">
+                                            Your browser does not support the video tag.
+                                        </video>
+                                            <p>FORMULA ADDICT. (2025, July 27). Qualifying [Video]. X. https://x.com/i/status/1949194247300903238</p>
                                         </div>
                                     </div>
                                 </div>
