--- a/index.html
+++ b/index.html
@@ -306,6 +306,7 @@
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-british')">British GP</button>
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-belgium-sprint')">Belgium GP Sprint</button>
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-belgium')">Belgium GP</button>
+                                        <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-hungary')">Hungarian GP</button>
                                     </nav>
                                     <!-- Race Results Content -->
                                     <div id="f1-results-content" class="text-sm sm:text-base mt-2">
@@ -377,6 +378,10 @@
                                             <p><strong>Belgium Grand Prix</strong></p>
                                             <img src="images/BelgiumResult.png" alt="Belgium Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
+                                        <div id="race-hungary" class="race-content">
+                                            <p><strong>Hungarian Grand Prix</strong></p>
+                                            <img src="images/HungaryResult.png" alt="Hungarian Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -403,6 +408,7 @@
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-austria')">Austrian GP</button>
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-british')">British GP</button>
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-belgium')">Belgium GP</button>
+                                        <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-hungary')">Hungarian GP</button>
                                     </nav>
                                     <!-- Race Facts content -->
                                     <div id="f1-facts-content" class="text-sm sm:text-base mt-2">
@@ -592,6 +598,11 @@
                                             Your browser does not support the video tag.
                                         </video>
                                             <p>FORMULA ADDICT. (2025, July 27). Qualifying [Video]. X. https://x.com/i/status/1949194247300903238</p>
+                                        </div>
+                                         <div id="facts-hungary" class="facts-content hidden">
+                                            <p><strong>Hungarian Grand Prix</strong></p>
+                                            <img src="images/Hungary.png" alt="Hungarian Grand Prix" class="w-full max-w-md h-auto mb-4">
+                                            
                                         </div>
                                     </div>
                                 </div>
