--- a/index.html
+++ b/index.html
@@ -602,7 +602,12 @@
                                          <div id="facts-hungary" class="facts-content hidden">
                                             <p><strong>Hungarian Grand Prix</strong></p>
                                             <img src="images/Hungary.png" alt="Hungarian Grand Prix" class="w-full max-w-md h-auto mb-4">
-                                            
+                                            <p><strong>Qualifying</strong></p>
+                                        <video width="640" height="360" controls>
+                                            <source src="images/CharlesHungaryQualy.mp4" type="video/mp4">
+                                            Your browser does not support the video tag.
+                                        </video>
+                                            <p>FORMULA ADDICT. (2025, August 02). Qualifying [Video]. X. https://x.com/i/status/1951735437585748395</p>
                                         </div>
                                     </div>
                                 </div>
