--- a/index.html
+++ b/index.html
@@ -628,6 +628,12 @@
                                         <div id="facts-monza" class="facts-content hidden">
                                             <p><strong>Monza Grand Prix</strong></p>
                                             <img src="images/Italy.png" alt="Italian Grand Prix" class="w-full max-w-md h-auto mb-4">
+                                            <p><strong>Fastest Lap Ever</strong></p>
+                                        <video width="640" height="360" controls>
+                                            <source src="images/MaxLap.mp4" type="video/mp4">
+                                            Your browser does not support the video tag.
+                                        </video>
+                                            <p>FORMULA 1. (2025, September 06). Qualifying [Video]. X. https://x.com/i/status/1964378563664056416</p>
                                         </div>
                                     </div>
                                 </div>
