--- a/index.html
+++ b/index.html
@@ -644,6 +644,12 @@
                                         <div id="facts-baku" class="facts-content hidden">
                                             <p><strong>Azerbaijan Grand Prix</strong></p>
                                             <img src="images/Baku.png" alt="Baku Grand Prix" class="w-full max-w-md h-auto mb-4">
+                                             <p><strong>Max vs. Carlos</strong></p>
+                                        <video width="640" height="360" controls>
+                                            <source src="images/MaxQualyBaku.mp4" type="video/mp4">
+                                            Your browser does not support the video tag.
+                                        </video>
+                                            <p>FORMULA ADDICT. (2025, September 20). Qualifying [Video]. X. https://x.com/i/status/1969464171973517348</p>
                                         </div>
                                     </div>
                                 </div>
