--- a/index.html
+++ b/index.html
@@ -650,6 +650,12 @@
                                             Your browser does not support the video tag.
                                         </video>
                                             <p>FORMULA ADDICT. (2025, September 20). Qualifying [Video]. X. https://x.com/i/status/1969464171973517348</p>
+                                            <p><strong>Max Onboard Lap</strong></p>
+                                        <video width="640" height="360" controls>
+                                            <source src="images/MaxOnboard.mp4" type="video/mp4">
+                                            Your browser does not support the video tag.
+                                        </video>
+                                            <p>FORMULA 1. (2025, September 20). Qualifying [Video]. X. https://x.com/i/status/1969446707663380501</p>
                                         </div>
                                     </div>
                                 </div>
