--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
                                         </div>
                                         <div id="facts-singapore" class="facts-content hidden">
                                             <p><strong>Singapore Grand Prix</strong></p>
-                                            <img src="images/Baku.png" alt="Singapore Grand Prix" class="w-full max-w-md h-auto mb-4">
+                                            <img src="images/Sinapore.png" alt="Singapore Grand Prix" class="w-full max-w-md h-auto mb-4">
                                         </div>
                                     </div>
                                 </div>
