--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
                                         </div>
                                         <div id="facts-singapore" class="facts-content hidden">
                                             <p><strong>Singapore Grand Prix</strong></p>
-                                            <img src="images/Sinapore.png" alt="Singapore Grand Prix" class="w-full max-w-md h-auto mb-4">
+                                            <img src="images/Singapore.png" alt="Singapore Grand Prix" class="w-full max-w-md h-auto mb-4">
                                         </div>
                                         <div id="facts-singapore" class="facts-content hidden">
                                             <p><strong>United States Grand Prix</strong></p>
