--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
                                             <p><strong>Singapore Grand Prix</strong></p>
                                             <img src="images/Singapore.png" alt="Singapore Grand Prix" class="w-full max-w-md h-auto mb-4">
                                         </div>
-                                        <div id="facts-singapore" class="facts-content hidden">
+                                        <div id="facts-united" class="facts-content hidden">
                                             <p><strong>United States Grand Prix</strong></p>
                                             <img src="images/united.png" alt="United States Grand Prix" class="w-full max-w-md h-auto mb-4">
                                         </div>
