--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
                                         </div>
                                          <div id="facts-mexico" class="facts-content hidden">
                                             <p><strong>Mexico Grand Prix</strong></p>
-                                            <img src="images/mexico.png" alt="Mexico Grand Prix" class="w-full max-w-md h-auto mb-4">
+                                            <img src="images/Mexico.png" alt="Mexico Grand Prix" class="w-full max-w-md h-auto mb-4">
                                         </div>
                                     </div>
                                 </div>
