--- a/index.html
+++ b/index.html
@@ -314,6 +314,7 @@
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-united-sprint')">United States Sprint GP</button>
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-united')">United States GP</button>
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-mexico')">Mexico GP</button>
+                                        <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-brazil')">Brazilain GP</button>
                                     </nav>
                                     <!-- Race Results Content -->
                                     <div id="f1-results-content" class="text-sm sm:text-base mt-2">
@@ -417,6 +418,10 @@
                                             <p><strong>Mexico Grand Prix</strong></p>
                                             <img src="images/MexicoResult.png" alt="Mexico Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
+                                        <div id="race-brazil" class="race-content">
+                                            <p><strong>Brazilian Grand Prix</strong></p>
+                                            <img src="images/BrazilResult.png" alt="Brazil Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -450,6 +455,7 @@
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-singapore')">Singapore GP</button>
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-united')">United States GP</button>
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-mexico')">Mexico GP</button>
+                                        <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-brazil')">Brazilian GP</button>
                                     </nav>
                                     <!-- Race Facts content -->
                                     <div id="f1-facts-content" class="text-sm sm:text-base mt-2">
@@ -691,6 +697,10 @@
                                          <div id="facts-mexico" class="facts-content hidden">
                                             <p><strong>Mexico Grand Prix</strong></p>
                                             <img src="images/Mexico.png" alt="Mexico Grand Prix" class="w-full max-w-md h-auto mb-4">
+                                        </div>
+                                        <div id="facts-brazil" class="facts-content hidden">
+                                            <p><strong>Brazilian Grand Prix</strong></p>
+                                            <img src="images/Brazil.png" alt="Brazil Grand Prix" class="w-full max-w-md h-auto mb-4">
                                         </div>
                                     </div>
                                 </div>
