--- a/index.html
+++ b/index.html
@@ -317,6 +317,8 @@
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-brazil-sprint')">Brazilain Sprint GP</button>
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-brazil')">Brazilain GP</button>
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-vegas')">Las Vegas GP</button>
+                                        <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-qatar-sprint')">Qatar Sprint</button>
+                                        <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-qatar')">Qatar GP</button>
                                     </nav>
                                     <!-- Race Results Content -->
                                     <div id="f1-results-content" class="text-sm sm:text-base mt-2">
@@ -432,6 +434,14 @@
                                             <p><strong>Las Vegas Grand Prix</strong></p>
                                             <img src="images/VegasResult.png" alt="Vegas Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
+                                        <div id="race-qatar-sprint" class="race-content">
+                                            <p><strong>Qatar Sprint Grand Prix</strong></p>
+                                            <img src="images/QatarSprint.png" alt="Qatar Sprint Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                        </div>
+                                        <div id="race-vegas" class="race-content">
+                                            <p><strong>Qatar Grand Prix</strong></p>
+                                            <img src="images/QatarResult.png" alt="Qatar Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -467,6 +477,7 @@
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-mexico')">Mexico GP</button>
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-brazil')">Brazilian GP</button>
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-vegas')">Las Vegas GP</button>
+                                        <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-qatar')">Qatar GP</button>
                                     </nav>
                                     <!-- Race Facts content -->
                                     <div id="f1-facts-content" class="text-sm sm:text-base mt-2">
