--- a/index.html
+++ b/index.html
@@ -728,6 +728,10 @@
                                             <p><strong>Las Vegas Grand Prix</strong></p>
                                             <img src="images/Vegas.png" alt="Vegas Grand Prix" class="w-full max-w-md h-auto mb-4">
                                         </div>
+                                        <div id="facts-qatar" class="facts-content hidden">
+                                            <p><strong>Qatar Grand Prix</strong></p>
+                                            <img src="images/Qatar.png" alt="Qatar Grand Prix" class="w-full max-w-md h-auto mb-4">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
