--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
                                             <p><strong>Qatar Sprint Grand Prix</strong></p>
                                             <img src="images/QatarSprint.png" alt="Qatar Sprint Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
-                                        <div id="race-vegas" class="race-content">
+                                        <div id="race-qatar" class="race-content">
                                             <p><strong>Qatar Grand Prix</strong></p>
                                             <img src="images/QatarResult.png" alt="Qatar Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
