--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                         <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 sm:gap-6">
                             <div id="card-driver-standings-image" class="weather-card bg-[url('images/Racing7.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
                                 <div class="bg-black bg-opacity-90 p-2 rounded">
-                                    <h3 class="text-base sm:text-lg font-bold">Driver Standings after the Qatar Race</h3>
+                                    <h3 class="text-base sm:text-lg font-bold">Driver Standings for 2025</h3>
                                     <div id="f1-driver-standings-image" class="mt-2">
                                         <img src="images/DStandingsVisual.png" alt="Driver Standings Visual Additional" class="w-full max-w-md h-auto mb-4">
                                         <img src="images/DStandings.png" alt="Driver Standings Visual" class="w-full max-w-md h-auto">
@@ -268,7 +268,7 @@
                         <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 sm:gap-6 direction-ltr">
                             <div id="card-constructor-standings-image" class="weather-card bg-[url('images/Racing7.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75 order-1">
                                 <div class="bg-black bg-opacity-90 p-2 rounded">
-                                    <h3 class="text-base sm:text-lg font-bold">Constructor Standings after the Qatar Race</h3>
+                                    <h3 class="text-base sm:text-lg font-bold">Constructor Standings for 2025</h3>
                                     <div id="f1-constructor-standings-image" class="mt-2">
                                         <img src="images/CStandings.png" alt="Constructor Standings Visual" class="w-full max-w-md h-auto">
                                     </div>
