--- a/index.html
+++ b/index.html
@@ -274,13 +274,14 @@
                                     </div>
                                 </div>
                             </div>
-                            <div id="card-constructor-standings" class="weather-card bg-[url('images/Racing7.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75 order-2">
+                         <!--  <div id="card-constructor-standings" class="weather-card bg-[url('images/Racing7.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75 order-2">
                                 <div class="bg-black bg-opacity-90 p-2 rounded">
                                     <h3 class="text-base sm:text-lg font-bold">Constructor Standings</h3>
                                     <div id="f1-constructor-standings" class="text-xs sm:text-sm mt-2">
                                     </div>
                                 </div>
                             </div>
+                            -->
                         </div>
                     </div>
                     <div id="f1-results-tab" class="f1-subtab-content hidden">
